<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fontFamily="casual"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical"
    android:weightSum="20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAllCaps="true"
        android:layout_weight="6"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/start_button_text"
        android:id="@+id/Start"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:layout_weight="7"
        android:onClick="toQuiz"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/highscore_button_text"
        android:id="@+id/HighScore"
        android:textSize="24sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_weight="7"
        android:onClick="toHighScore"
         />

</LinearLayout>
